[gd_scene load_steps=11 format=3 uid="uid://cnxi1bupfg7cq"]

[ext_resource type="FontFile" uid="uid://cfhhd352mvmsc" path="res://graphics/font/HanaleiFill-Regular.ttf" id="1_0wsoe"]
[ext_resource type="Script" uid="uid://l4wn80trej1k" path="res://scenes/UI/ui.gd" id="1_n6wm8"]
[ext_resource type="Texture2D" uid="uid://byl5ha3ul5jfn" path="res://graphics/orb/speed.png" id="3_gl4co"]
[ext_resource type="Texture2D" uid="uid://b1alkycj71jte" path="res://graphics/orb/damage.png" id="4_gl4co"]
[ext_resource type="Texture2D" uid="uid://cuj1nyno5v53p" path="res://graphics/orb/pass_through.png" id="5_lj5up"]

[sub_resource type="Theme" id="Theme_qkeug"]
default_font = ExtResource("1_0wsoe")

[sub_resource type="Theme" id="Theme_gl4co"]
default_font = ExtResource("1_0wsoe")

[sub_resource type="Theme" id="Theme_lj5up"]
default_font = ExtResource("1_0wsoe")

[sub_resource type="Theme" id="Theme_wgnrc"]
default_font = ExtResource("1_0wsoe")

[sub_resource type="Theme" id="Theme_84lt7"]
default_font = ExtResource("1_0wsoe")

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_n6wm8")

[node name="GameTime" type="RichTextLabel" parent="."]
anchors_preset = -1
anchor_left = 0.884
anchor_top = 0.032
anchor_right = 0.99
anchor_bottom = 0.068
offset_left = 0.631958
offset_top = 0.264
offset_right = 0.519897
offset_bottom = -0.064003
theme = SubResource("Theme_qkeug")
text = "20000000:00"

[node name="AttackSpeed" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -27.0
offset_top = 26.0
offset_right = 13.0
offset_bottom = 66.0

[node name="TextureRect" type="TextureRect" parent="AttackSpeed"]
layout_mode = 0
offset_left = 22.0
offset_right = 109.0
offset_bottom = 64.0
texture = ExtResource("3_gl4co")
stretch_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="AttackSpeed"]
layout_mode = 0
offset_left = 79.0
offset_top = 14.0
offset_right = 190.0
offset_bottom = 37.0

[node name="AttackSpeedText" type="Label" parent="AttackSpeed/HBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_gl4co")
text = "Attack Speed:"

[node name="AttackSpeedValue" type="Label" parent="AttackSpeed/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = SubResource("Theme_lj5up")

[node name="AttackDamage" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = 91.0
offset_right = 40.0
offset_bottom = 131.0

[node name="TextureRect" type="TextureRect" parent="AttackDamage"]
layout_mode = 0
offset_left = -6.0
offset_top = 8.0
offset_right = 81.0
offset_bottom = 72.0
texture = ExtResource("4_gl4co")
stretch_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="AttackDamage"]
layout_mode = 0
offset_left = 50.0
offset_top = 24.0
offset_right = 177.0
offset_bottom = 47.0

[node name="AttackDamageText" type="Label" parent="AttackDamage/HBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_wgnrc")
text = "Attack Damage:"

[node name="AttackDamageValue" type="Label" parent="AttackDamage/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = SubResource("Theme_84lt7")

[node name="PassThrough" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -1.0
offset_top = 168.0
offset_right = 39.0
offset_bottom = 208.0

[node name="TextureRect" type="TextureRect" parent="PassThrough"]
layout_mode = 0
offset_left = -6.0
offset_top = 8.0
offset_right = 81.0
offset_bottom = 72.0
texture = ExtResource("5_lj5up")
expand_mode = 2
stretch_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="PassThrough"]
layout_mode = 0
offset_left = 77.0
offset_top = 27.0
offset_right = 204.0
offset_bottom = 50.0

[node name="PassThroughText" type="Label" parent="PassThrough/HBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_wgnrc")
text = "Pass Through:"

[node name="PassThroughValue" type="Label" parent="PassThrough/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = SubResource("Theme_84lt7")
